[gd_scene load_steps=6 format=3 uid="uid://d3ewjgn1eocen"]

[ext_resource type="Script" uid="uid://3woefn66x557" path="res://barkley2/rooms/r_shader_loader.gd" id="1_cg64c"]
[ext_resource type="Texture2D" uid="uid://p1fyr4oxbcub" path="res://barkley2/assets/b2_original/images/merged/s_bball.png" id="2_3m7pj"]
[ext_resource type="FontFile" uid="uid://bmt3s8i84e3xl" path="res://barkley2/resources/fonts/fn1.tres" id="3_3m7pj"]
[ext_resource type="FontFile" uid="uid://cyhd7mric16e1" path="res://barkley2/resources/fonts/fn2o.tres" id="4_sgs1q"]

[sub_resource type="LabelSettings" id="LabelSettings_xy27y"]
font = ExtResource("4_sgs1q")
font_color = Color(0.07683588, 0.0768358, 0.0768358, 1)

[node name="r_shader_loader" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cg64c")

[node name="cuck_box" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ball_sprite" type="Sprite2D" parent="."]
position = Vector2(218, 211)
texture = ExtResource("2_3m7pj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="loading_lbl" type="RichTextLabel" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/normal_font = ExtResource("3_3m7pj")
text = "Now Loading..."

[node name="loading_detail_lbl" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "PLACEHOLDER"
label_settings = SubResource("LabelSettings_xy27y")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
